--- a/env.example
+++ b/env.example
@@ -10,8 +10,10 @@ PROVIDER_jvns=false
 PROVIDER_youtube=false
 PROVIDER_hc-mails=false
 PROVIDER_xkcd=false
+PROVIDER_lol=false
 
 # Provider config
+lol_token="RGAPI-XXXX"
 hc-mails_token="th_apk_live_XXX"
 
 # Output
