add generic_rss provider

--- a/env.example
+++ b/env.example
@@ -11,6 +11,7 @@ PROVIDER_youtube=false
 PROVIDER_hc-mails=false
 PROVIDER_xkcd=false
 PROVIDER_lol=false
+PROVIDER_generic-rss=false
 
 # Provider config
 lol_token="RGAPI-XXXX"
