Add modrinth notification provider

--- a/env.example
+++ b/env.example
@@ -12,10 +12,12 @@ PROVIDER_hc-mails=false
 PROVIDER_xkcd=false
 PROVIDER_lol=false
 PROVIDER_generic-rss=false
+PROVIDER_modrinth=false
 
 # Provider config
 lol_token="RGAPI-XXXX"
 hc-mails_token="th_apk_live_XXX"
+modrinth_pat="mrp_XXX"
 
 # Output
 discord_webhook="false" # false or webhook url
